--- a/website/docs/guide/primitives.mdx
+++ b/website/docs/guide/primitives.mdx
@@ -39,28 +39,31 @@ document.getElementById("app").innerHTML = `Counter: ${counter()}`;
 `state()` itself only accepts object / array, and does not need function call to access its value.
 You can also define setters inside state itself.
 
+You can also include an atom / state in another atom / state, and it will get auto-unwrapped. Update to child/parent is reflected on both sides.
 
 <SandpackEditor
   template="vanilla-ts"
-  dependencies={{ "@iniz/core": "*" }}
+  dependencies={{ "@iniz/core": "0.0.0-20221106155550" }}
 >
 
 ```ts
 import { atom, state } from "@iniz/core";
 
+const email = atom('');
+
 const form = state({
   name: '',
-  email: '',
+  email,
   reset() {
     this.name = 'Tom Cruise';
-    this.email = 'tom@someemail.com'; // Note it won't need function call
+    this.email = 'tom@someemail.com'; // Notice you won't need function call to update atom value
   }
 });
 
 form.reset();
 form.email = 'cruise@anotheremail.com';
 
-document.getElementById("app").innerHTML = `Name: ${form.name}<br /> Email: ${form.email}`;
+document.getElementById("app").innerHTML = `Name: ${form.name} <br /> Email: ${form.email} <br /> Atom: ${email()}`;
 
 ```
 
